--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>1.37</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version> <!-- use latest stable -->
+        </dependency>
     </dependencies>
 
     <!-- Build Configuration -->
